Version 2009120801
+ Added 'test' option to 'match'.

Version 2009120501
+ Methods 'match' and 'no_match' can take additional parameters.

Version 2009120301
+ Fixed a bug that autovivified the correct number of named params.
+ Set build_requires & configure_requires.

Version 2009041401
+ Added tests for POD and Kwalitee

Version 2009041401
+ Fixed MANIFEST.

Version 2009041001
+ Add OO interface.

Version 2009040901
+ Modernized Makefile.PL.
+ POD fixes.
+ Added Changes file.
+ Removed $VERSION from test files.

Version 2009033101
+ Initial release