@@ -8,6 +8,7 @@ t/100_use.t
 t/101_import.t
 t/102_import.t
 t/110_pattern.t
+t/111_pattern.t
 t/120_keep_pattern.t
 t/130_comment.t
 t/140_utf8.t
