@@ -1,3 +1,6 @@
+Version 2009120901
++ Added undocumeted features.
+
 Version 2009120801
 + Added 'test' option to 'match'.
 
